--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -2,15 +2,29 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Profile";
+    ViewData["SecondTitle"] = "Rezervacije";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h3>@ViewData["Title"]</h3>
-<partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
+        <h3>@ViewData["Title"]</h3>
+        <partial name="_StatusMessage" for="StatusMessage" />
+
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+
+            <!----------------------------->
+            <div class="form-floating mb-3">
+                <input asp-for="Ime" class="form-control" placeholder="your name" disabled />
+                <label asp-for="Ime" class="form-label"></label>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Prezime" class="form-control" placeholder="your last name" disabled />
+                <label asp-for="Prezime" class="form-label"></label>
+            </div>
+            <!----------------------------->
+
             <div class="form-floating mb-3">
                 <input asp-for="Username" class="form-control" placeholder="Please choose your username." disabled />
                 <label asp-for="Username" class="form-label"></label>
