--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,15 +12,15 @@
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-group">
-                <label asp-for="Input.Ime"></label>
-                <input asp-for="Input.Ime" class="form-control" />
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Ime" class="form-control" aria-required="true" placeholder="ime" />
+                <label asp-for="Input.Ime">Ime</label>
                 <span asp-validation-for="Input.Ime" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="Input.Prezime"></label>
-                <input asp-for="Input.Prezime" class="form-control" />
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Prezime" class="form-control" aria-required="true" placeholder="prezime" />
+                <label asp-for="Input.Prezime">Prezime</label>
                 <span asp-validation-for="Input.Prezime" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
