--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Details.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Details.cshtml
@@ -28,6 +28,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.popust)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.aktivna)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.aktivna)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Izvedba)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Izvedba.ID)
+        </dd>
     </dl>
 </div>
 <div>
