--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Edit.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Edit.cshtml
@@ -13,6 +13,16 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
+
+            <!--
+                <div class="form-group">
+                    <label asp-for="IDIzvedbe" class="control-label"></label>
+                    <select asp-for="IDIzvedbe" class ="form-control" asp-items="ViewBag.IDIzvedbe"></select>
+                </div>
+            -->
+
+            <input type="hidden" asp-for="IDIzvedbe" />
+
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="kupovina" /> @Html.DisplayNameFor(model => model.kupovina)
@@ -27,6 +37,11 @@
                 <label asp-for="popust" class="control-label"></label>
                 <input asp-for="popust" class="form-control" />
                 <span asp-validation-for="popust" class="text-danger"></span>
+            </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="aktivna" /> @Html.DisplayNameFor(model => model.aktivna)
+                </label>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
