--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Index.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="KreirajRezervaciju">Kreiraj rezervaciju</a>
 </p>
 <table class="table">
     <thead>
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.Izvedba.ID)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Kupovina</a> |
+                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-action="OtkaziRezervaciju" asp-route-id="@item.ID">Otkazi</a>
             </td>
         </tr>
 }
