--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Kupovina.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Kupovina.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="PlatiRezervaciju">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
 
