views za identity i rezervaciju + ocjenjivanje pregledanih predstava iz profila

--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/Kupovina.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/Kupovina.cshtml
@@ -2,7 +2,7 @@
 @model KupovinaModel
 
 @{
-    ViewData["Title"] = "Placanje";
+    ViewData["Title"] = "Plaćanje";
     ViewData["ActivePage"] = ManageNavPages.Kupovina;
 }
 
@@ -11,16 +11,40 @@
         <h3>@ViewData["Title"]</h3>
         <partial name="_StatusMessage" for="StatusMessage" />
         <form method="post">
-            <div>
-                <h5>Metode placanja i ostalo...</h5>
+            @if(Model.rezervacija.popust != 0)
+            {
+                <div>
+                    <p>Popust: @(Model.rezervacija.popust * 100)%</p>
+                </div>         
+            }
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.CreditCardNo" class="form-control" aria-required="true" />
+                <label asp-for="Input.CreditCardNo" class="form-label"></label>
+                <span asp-validation-for="Input.CreditCardNo" class="text-danger"></span>
             </div>
-            <div>
-                <button type="submit" class="btn btn-primary">Plati</button>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.CVC" class="form-control" aria-required="true" />
+                <label asp-for="Input.CVC" class="form-label"></label>
+                <span asp-validation-for="Input.CVC" class="text-danger"></span>
             </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.ExpirationDate" class="form-control" aria-required="true" />
+                <label asp-for="Input.ExpirationDate" class="form-label"></label>
+                <span asp-validation-for="Input.ExpirationDate" class="text-danger"></span>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.CardholderName" class="form-control" aria-required="true" />
+                <label asp-for="Input.CardholderName" class="form-label"></label>
+                <span asp-validation-for="Input.CardholderName" class="text-danger"></span>
+            </div>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Plati</button>
         </form>
     </div>
 </div>
-
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
