--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -5,6 +5,5 @@
 }
 
 <header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <h1 class="text-danger">Pristup nije dozvoljen.</h1>
 </header>
