--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Confirm email";
+    ViewData["Title"] = "Potvrda emaila";
 }
 
 <h1>@ViewData["Title"]</h1>
