--- a/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/OtkazivanjeRezervacije.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Areas/Identity/Pages/Account/Manage/OtkazivanjeRezervacije.cshtml
@@ -6,52 +6,30 @@
     ViewData["ActivePage"] = ManageNavPages.OtkazivanjeRezervacije;
 }
 
-<h1>@ViewData["Title"]</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Jeste li sigurni da želite otkazati ovu rezervaciju?</h3>
 
 <partial name="_StatusMessage" for="StatusMessage" />
 <form method="post">
     <div>
-        <h4>Rezervacija</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.rezervacija.kupovina)
+                ID rezervacije
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.rezervacija.kupovina)
+                @Html.DisplayFor(model => model.rezervacija.ID)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.rezervacija.brojKarata)
+                Broj karata
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.rezervacija.brojKarata)
             </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.rezervacija.popust)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.rezervacija.popust)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.rezervacija.aktivna)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.rezervacija.aktivna)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.rezervacija.Izvedba)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.rezervacija.Izvedba.ID)
-            </dd>
         </dl>
             
         <div>
-            <button type="submit" class="btn btn-danger">Otkazi</button>
+            <button type="submit" class="btn btn-danger">Otkaži</button>
         </div>
-
     </div>
 </form>
 
