--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Delete.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Delete.cshtml
@@ -1,51 +1,31 @@
 ﻿@model Teatar18_2.Models.Rezervacija
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Otkazivanje rezervacije";
 }
 
-<h1>Delete</h1>
+<h3>Jeste li sigurni da želite otkazati ovu rezervaciju?</h3>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Rezervacija</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.kupovina)
+        <dt class="col-sm-2">
+            ID rezervacije
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.kupovina)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ID)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.brojKarata)
+        <dt class="col-sm-2">
+            Broj karata
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.brojKarata)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.popust)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.popust)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.aktivna)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.aktivna)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Izvedba)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Izvedba.ID)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Otkaži" class="btn btn-danger" /> |
+        <a asp-action="Index">Povratak na listu</a>
     </form>
 </div>
