--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Edit.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Rezervacija/Edit.cshtml
@@ -1,50 +1,36 @@
 ﻿@model Teatar18_2.Models.Rezervacija
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Plaćanje uživo";
 }
 
-<h1>Edit</h1>
-
-<h4>Rezervacija</h4>
+<h3>@ViewData["Title"]</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
-
             <input type="hidden" asp-for="IDIzvedbe" />
+            <input type="hidden" asp-for="brojKarata" />
+            <input type="hidden" asp-for="popust" />
+            <input type="hidden" asp-for="aktivna" />
 
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="kupovina" /> @Html.DisplayNameFor(model => model.kupovina)
+                    <input class="form-check-input" asp-for="kupovina" /> Plaćeno
                 </label>
             </div>
+            <br>
             <div class="form-group">
-                <label asp-for="brojKarata" class="control-label"></label>
-                <input asp-for="brojKarata" class="form-control" />
-                <span asp-validation-for="brojKarata" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="popust" class="control-label"></label>
-                <input asp-for="popust" class="form-control" />
-                <span asp-validation-for="popust" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="aktivna" /> @Html.DisplayNameFor(model => model.aktivna)
-                </label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Spasi" class="btn btn-primary" >
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Povratak na listu</a>
 </div>
 
 @section Scripts {
