--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Predstava/Edit.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Predstava/Edit.cshtml
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="zanr" class="control-label"></label>
-                <select asp-for="zanr" class="form-control"></select>
+                <select asp-for="zanr" class="form-control" asp-items="Html.GetEnumSelectList<Zanr>()"></select>
                 <span asp-validation-for="zanr" class="text-danger"></span>
             </div>
             <div class="form-group">
