--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Home/Privacy.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Home/Privacy.cshtml
@@ -27,7 +27,7 @@
         <div class="radno-vrijeme">
             <h2>Radno vrijeme</h2>
             <p>
-                Ponedjeljak - Peta: 15:00 - 22:00
+                Ponedjeljak - Petak: 15:00 - 22:00
                 <br>
                 Subota: 15:00 - 23:00
                 <br>
