--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Pitanja/OdgovaranjeNaPitanja.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Pitanja/OdgovaranjeNaPitanja.cshtml
@@ -4,32 +4,36 @@
     ViewData["Title"] = "Odgovaranje Na Pitanja";
 }
 
-<h2>Odgovaranje Na Pitanja</h2>
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>Predmet</th>
-            <th>Sadrzaj</th>
-            <th>Datum Postavljanja</th>
-            <th>Odgovori</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var pitanje in Model)
-        {
-            <tr>
-                <td>@pitanje.predmet</td>
-                <td>@pitanje.sadrzaj</td>
-                <td>@pitanje.datumPostavljanja</td>
-                <td>
-                    <form asp-action="OdgovaranjeNaPitanja" method="post">
-                        <input type="hidden" name="pitanjeId" value="@pitanje.ID" />
-                        <textarea name="odgovor" class="form-control" required></textarea>
-                        <input type="submit" value="Odgovori" class="btn btn-primary mt-2" />
-                    </form>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<h2>Odgovaranje na pitanja</h2>
+<form asp-action="PostavljanjePitanja">
+    @if (User.Identity.IsAuthenticated)
+    {
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Predmet</th>
+                    <th>Sadrzaj</th>
+                    <th>Datum Postavljanja</th>
+                    <th>Odgovori</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var pitanje in Model)
+                {
+                    <tr>
+                        <td>@pitanje.predmet</td>
+                        <td>@pitanje.sadrzaj</td>
+                        <td>@pitanje.datumPostavljanja</td>
+                        <td>
+                            <form asp-action="OdgovaranjeNaPitanja" method="post">
+                                <input type="hidden" name="pitanjeId" value="@pitanje.ID" />
+                                <textarea name="odgovor" class="form-control" required></textarea>
+                                <input type="submit" value="Odgovori" class="btn btn-primary mt-2" />
+                            </form>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+</form>
