mini izmjene u views + pocetak autorizacije

--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Home/Privacy.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Home/Privacy.cshtml
@@ -27,11 +27,11 @@
         <div class="radno-vrijeme">
             <h2>Radno vrijeme</h2>
             <p>
-                Ponedjeljak - Petak: 15:00 - 22:00
+                ponedjeljak - petak: 15:00 - 22:00
                 <br>
-                Subota: 15:00 - 23:00
+                subota: 15:00 - 23:00
                 <br>
-                Nedjelja i praznici - neradni
+                nedjelja i praznici - neradni
             </p>
         </div>
         <div class="kontakt">
