--- a/Implementacija/Teatar18_2/Teatar18_2/Views/Pitanja/PostavljanjePitanja.cshtml
+++ b/Implementacija/Teatar18_2/Teatar18_2/Views/Pitanja/PostavljanjePitanja.cshtml
@@ -14,9 +14,10 @@
             <input asp-for="predmet" class="form-control" />
         </div>
         <div class="form-group">
-            <label asp-for="sadrzaj"> Sadrzaj</label>
+            <label asp-for="sadrzaj"> Sadržaj</label>
             <textarea asp-for="sadrzaj" class="form-control"></textarea>
         </div>
-        <input type="submit" value="Postavi Pitanje" class="btn btn-primary" />
+        <br />
+        <input type="submit" value="Postavi pitanje" class="btn btn-primary" />
     }
 </form>
